--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <meta name="twitter:creator" content="@ut10min">
     <meta name="twitter:title" content="10分で伝えます！東大研究最前線 - トップページ">
     <meta name="twitter:description" content="島村勇徳のウェブページです。最先端の研究について10分間で分かりやすくお伝えします。">
-    <meta name="twitter:image" content="https://ut-10min.github.io/img/logo_kf71.png">
+    <meta name="twitter:image" content="https://iappotakebee.github.io/img/logo_kf71.png">
     <meta property="og:title" content="10分で伝えます！東大研究最前線 - トップページ">
-    <meta property="og:url" content="https://ut-10min.github.io/">
-    <meta property="og:image" content="https://ut-10min.github.io/img/logo_kf71.png">
+    <meta property="og:url" content="https://iappotakebee.github.io/">
+    <meta property="og:image" content="https://iappotakebee.github.io/img/logo_kf71.png">
     <meta property="og:site_name" content="10分で伝えます！東大研究最前線">
 
 
@@ -70,7 +70,7 @@
                 <li>
                     <h3>2020年度 駒場祭</h3>
                     
-                        <a href="https://ut-10min.github.io/kf71/" target="_blank">
+                        <a href="https://iappotakebee.github.io/kf71/" target="_blank">
                         <p>10分で伝えます！東大研究最前線＠オンライン開催 (2020/11/21-23)</p>
                         </a>
                         
@@ -84,43 +84,43 @@
             <ul id="past-list">
                 <li>
                     <h3>2020年度 五月祭</h3>
-                    <a href="https://ut-10min.github.io/mf93/" target="_blank">
+                    <a href="https://iappotakebee.github.io/mf93/" target="_blank">
                         <p>10分で伝えます！東大研究最前線＠オンライン開催 (2020/9/20-21)</p>
                     </a>
                 </li>
                 <li>
                     <h3>2019年度 駒場祭</h3>
-                    <a href="https://ut-10min.github.io/kf70/" target="_blank">
+                    <a href="https://iappotakebee.github.io/kf70/" target="_blank">
                         <p>10分で伝えます！東大研究最前線＠東京大学駒場キャンパス (2019/11/22-24)</p>
                     </a>
                 </li>
                 <li>
                     <h3>2019年度 五月祭</h3>
-                    <a href="https://ut-10min.github.io/mf92/" target="_blank">
+                    <a href="https://iappotakebee.github.io/mf92/" target="_blank">
                         <p>10分で伝えます！東大研究最前線＠東京大学本郷キャンパス (2019/5/18-19)</p>
                     </a>
                 </li>
                 <li>
                     <h3>2018年度 駒場祭</h3>
-                    <a href="https://ut-10min.github.io/kf69/" target="_blank">
+                    <a href="https://iappotakebee.github.io/kf69/" target="_blank">
                         <p>10分で伝えます！東大研究最前線＠東京大学駒場キャンパス (2018/11/23-25)</p>
                     </a>
                 </li>
                 <li>
                     <h3>2018年度 五月祭</h3>
-                    <a href="https://ut-10min.github.io/mf91/" target="_blank">
+                    <a href="https://iappotakebee.github.io/mf91/" target="_blank">
                         <p>10分で伝えます！東大研究最前線＠東京大学本郷キャンパス (2018/5/19-20)</p>
                     </a>
                 </li>
                 <li>
                     <h3>2017年度 駒場祭</h3>
-                    <a href="https://ut-10min.github.io/kf68/" target="_blank">
+                    <a href="https://iappotakebee.github.io/kf68/" target="_blank">
                         <p>10分で伝えます！東大研究最前線＠東京大学駒場キャンパス (2017/11/24-26)</p>
                     </a>
                 </li>
                 <li>
                     <h3>2017年度 五月祭</h3>
-                    <a href="https://ut-10min.github.io/mf90/" target="_blank">
+                    <a href="https://iappotakebee.github.io/mf90/" target="_blank">
                         <p>10分で伝えます！東大研究最前線＠東京大学本郷キャンパス (2017/5/20-21)</p>
                     </a>
                 </li>
@@ -132,7 +132,7 @@
                 </li>
                 <li>
                     <h3>2016年度 五月祭</h3>
-                    <a href="http://ut-10min.strikingly.com/" target="_blank">
+                    <a href="http://iappotakebee.strikingly.com/" target="_blank">
                         <p>10分で伝えます！東大研究最前線＠東京大学本郷キャンパス (2016/5/14-15)</p>
                     </a>
                 </li>
