[add] changed the css

--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
+<!DOCTYPE html>
 <html lang="ja">
-
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=360">
     <meta name="description" content="島村勇徳のウェブページです。最先端の研究について10分間で分かりやすくお伝えします。">
-    <meta name="keywords" content="東京大学,東大,五月祭,駒場祭,学園祭,講演,10分で伝えます,10分,東大研究最前線,研究最前線,研究">
-    <title>10分で伝えます！東大研究最前線 - トップページ</title>
-    <link rel="stylesheet" href="css/main.css">
+    <meta name="keywords" content="東京大学,東大,五月祭,学園祭,講演,2020,10分で伝えます,10分,東大研究最前線,研究最前線,研究">
+    <title>2020年度五月祭「島村勇徳」</title>
+    <link rel="stylesheet" href="css/main.css?201804201023">
 
     <!-- OGP -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@ut10min">
     <meta name="twitter:creator" content="@ut10min">
-    <meta name="twitter:title" content="10分で伝えます！東大研究最前線 - トップページ">
+    <meta name="twitter:title" content="2020年度五月祭「島村勇徳」 - 講演トップ">
     <meta name="twitter:description" content="島村勇徳のウェブページです。最先端の研究について10分間で分かりやすくお伝えします。">
-    <meta name="twitter:image" content="https://iappotakebee.github.io/img/logo_kf71.png">
-    <meta property="og:title" content="10分で伝えます！東大研究最前線 - トップページ">
-    <meta property="og:url" content="https://iappotakebee.github.io/">
-    <meta property="og:image" content="https://iappotakebee.github.io/img/logo_kf71.png">
-    <meta property="og:site_name" content="10分で伝えます！東大研究最前線">
-
+    <meta name="twitter:image" content="https://iappotakebee.github.io/mf93/img/logo_mf93.png">
+    <meta property="og:title" content="2020年度五月祭「島村勇徳」 - 講演トップ">
+    <meta property="og:url" content="https://iappotakebee.github.io/mf93/timetable.html">
+    <meta property="og:image" content="https://iappotakebee.github.io/mf93/img/logo_mf93.png">
+    <meta property="og:site_name" content="2020年度五月祭「島村勇徳」">
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -27,155 +26,105 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123778672-1"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-123778672-1');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-123778672-1');
     </script>
 
     <!-- user script -->
-    <!-- <script src="js/main.js"></script> -->
-</head>
-
-<body>
-    <div class="container">
-        <!-- タイトル -->
-        <div id="title-hero">
-            <div id="title-logo">
-                <img src="img/title.png">
-            </div>
-        </div>
-        <!-- 概要 -->
-        <div class="full-article" id="article-intro">
-            <h2>「10分で伝えます！東大研究最前線」とは？</h2>
-            <p>
-                <b>理系文系問わず集まった東京大学の大学院生／若手研究者による講演企画</b>です。
-                <br> 様々な分野をとり混ぜて、それぞれ
-                <b>10分間</b>という短い時間でお伝えします。 質疑応答の時間も確保し、より深く知りたいあなたの知的好奇心に応えます。
-                <br> 東京大学学園祭（五月祭・駒場祭）で毎回企画を開催しているほか，ご依頼により出張講演も行っています。
-            </p>
-            <p class="center" id="socialicons">
-                <a href="https://twitter.com/ut10min" target="_blank">
-                    <img src="img/tweet.png">
-                </a>
-                <a href="https://www.facebook.com/10minScience/" target="_blank">
-                    <img src="img/facebook.png">
-                </a>
-            </p>
-        </div>
-        <!-- 開催情報 -->
-        <div class="full-article" id="article-past">
-            <h2>次回の開催情報</h2>
-            <ul id="past-list">
-                <li>
-                    <h3>2020年度 駒場祭</h3>
-                    
-                        <a href="https://iappotakebee.github.io/kf71/" target="_blank">
-                        <p>10分で伝えます！東大研究最前線＠オンライン開催 (2020/11/21-23)</p>
-                        </a>
-                        
-                        <!--<p>10分で伝えます！東大研究最前線＠オンライン開催 (2020/11/21-23)<br>
-                            詳細は後日公開します。
-                        </p>-->
-                </li>
-            </ul>
-            <p>&nbsp;</p>
-            <h2>これまでの開催情報</h2>
-            <ul id="past-list">
-                <li>
-                    <h3>2020年度 五月祭</h3>
-                    <a href="https://iappotakebee.github.io/mf93/" target="_blank">
-                        <p>10分で伝えます！東大研究最前線＠オンライン開催 (2020/9/20-21)</p>
-                    </a>
-                </li>
-                <li>
-                    <h3>2019年度 駒場祭</h3>
-                    <a href="https://iappotakebee.github.io/kf70/" target="_blank">
-                        <p>10分で伝えます！東大研究最前線＠東京大学駒場キャンパス (2019/11/22-24)</p>
-                    </a>
-                </li>
-                <li>
-                    <h3>2019年度 五月祭</h3>
-                    <a href="https://iappotakebee.github.io/mf92/" target="_blank">
-                        <p>10分で伝えます！東大研究最前線＠東京大学本郷キャンパス (2019/5/18-19)</p>
-                    </a>
-                </li>
-                <li>
-                    <h3>2018年度 駒場祭</h3>
-                    <a href="https://iappotakebee.github.io/kf69/" target="_blank">
-                        <p>10分で伝えます！東大研究最前線＠東京大学駒場キャンパス (2018/11/23-25)</p>
-                    </a>
-                </li>
-                <li>
-                    <h3>2018年度 五月祭</h3>
-                    <a href="https://iappotakebee.github.io/mf91/" target="_blank">
-                        <p>10分で伝えます！東大研究最前線＠東京大学本郷キャンパス (2018/5/19-20)</p>
-                    </a>
-                </li>
-                <li>
-                    <h3>2017年度 駒場祭</h3>
-                    <a href="https://iappotakebee.github.io/kf68/" target="_blank">
-                        <p>10分で伝えます！東大研究最前線＠東京大学駒場キャンパス (2017/11/24-26)</p>
-                    </a>
-                </li>
-                <li>
-                    <h3>2017年度 五月祭</h3>
-                    <a href="https://iappotakebee.github.io/mf90/" target="_blank">
-                        <p>10分で伝えます！東大研究最前線＠東京大学本郷キャンパス (2017/5/20-21)</p>
-                    </a>
-                </li>
-                <li>
-                    <h3>2016年度 駒場祭</h3>
-                    <a href="http://10min-ut.wixsite.com/kfes67" target="_blank">
-                        <p>10分で伝えます！東大研究最前線＠東京大学駒場キャンパス (2016/11/25-27)</p>
-                    </a>
-                </li>
-                <li>
-                    <h3>2016年度 五月祭</h3>
-                    <a href="http://iappotakebee.strikingly.com/" target="_blank">
-                        <p>10分で伝えます！東大研究最前線＠東京大学本郷キャンパス (2016/5/14-15)</p>
-                    </a>
-                </li>
-                <li>
-                    <h3>2015年度 駒場祭</h3>
-                    <a href="http://10min-science-komaba.strikingly.com/" target="_blank">
-                        <p>10分で伝えます！東大研究最前線＠東京大学駒場キャンパス (2015/11/21-23)</p>
-                    </a>
-                </li>
-                <li>
-                    <h3>2015年度 五月祭</h3>
-                    <a href="http://daisy.phys.s.u-tokyo.ac.jp/student/nishiguchi/sciencebar/" target="_blank">
-                        <p>院生サイエンスBar＠東京大学本郷キャンパス (2015/5/16-17)</p>
-                    </a>
-                </li>
-
-            </ul>
-        </div>
-        <!-- 発表資料など -->
-        <div class="full-article">
-        </div>
-        <!-- お問い合わせ -->
-        <div class="full-article article-dark" id="article-inquiry">
-            <h2>お問い合わせ</h2>
-            <div class="article-headline">
-                <p>開催情報などお気軽にお問い合わせください。
-                <br>(注)オンライン講演申し込みフォームではありません。
-                <!--<br />企画への参加を希望される方も，こちらからメッセージをお送りください。--></p>
-            </div>
-            <div id="inquiry-form-pc">
-                <iframe src="https://ws.formzu.net/fgen/S65772278/" id="inqury-iframe" scrolling="yes"></iframe>
-            </div>
-            <div id="inquiry-form-touch">
-                <iframe src="https://ws.formzu.net/sfgen/S65772278/" id="inqury-iframe" scrolling="yes"></iframe>
-            </div>
-        </div>
-        <!-- 運営 -->
-        <div class="full-article" id="article-us">
-            <h2>運営団体について</h2>
-            <p>「10分で伝えます！東大研究最前線」は，本企画だけのために集結した東京大学の大学院生・若手研究者有志（通称「大学院生詰め合わせ」）によって運営を行っています。</p>
-            <!-- <p>本団体では，企画に参加・協力してくださる院生（含: 六年制学科高学年生）の方を募集しています！お問い合わせフォームからお気軽にお声掛けください。</p> -->
-        </div>
+    <script src="js/main.js"></script>
+  </head>
+  <body>
+    <div class="fixed-nav">
+      <div class="fixed-nav-inner">
+        <a href="/">トップ</a>
+        <!-- <a href="index.html" class="active">トップ</a> -->
+        <a href="index.html" class="active">講演トップ</a>
+        <a href="talks.html">講演一覧</a>
+        <a href="timetable.html">タイムテーブル</a>
+      </div>
     </div>
-</body>
-
+    <div class="container">
+      <div id="title-hero">
+        <div id="title-logo">
+          <img src="img/title.png">
+        </div>
+        <div id="title-info">
+          <p>2020/09/20-21</p>
+          <h4>第93回&nbsp;東京大学五月祭 (オンライン開催)</h4>
+          <!-- <p>申込は<a href="https://us02web.zoom.us/webinar/register/WN_Alecd3TPQXyfpV1kIXXCVQ" style="color : #ffffff;">こちら</a>から</p>-->
+          <p>五月祭常任委員会認定&nbsp;みどころ企画</p>
+        </div>
+      </div>
+      <div class="full-article" id="article-intro">
+        <h2>この企画について</h2>
+        <div class="article-headline">
+          <h3>大学院生・若手研究者が、<br>
+          みなさまに最前線の「新しい」をお伝えします。</h3>
+        </div>
+        <p>《島村勇徳》は、<br>
+        <b>理系文系問わず集まった東京大学の大学院生／若手研究者による講演企画</b>です。<br>
+        様々な分野をとり混ぜて、それぞれ<b>10分間</b>という短い時間でお伝えします。<br>
+        質疑応答の時間も確保し、より深く知りたいあなたの知的好奇心に応えます。<br>
+        今年は<b>オンラインで zoom を用いて行います</b>。</p>
+        <p class="center" id="socialicons">
+          <a href="https://twitter.com/ut10min" target="_blank"><img src="img/tweet.png"></a>
+          <a href="https://www.facebook.com/10minScience/" target="_blank"><img src="img/facebook.png"></a>
+        </p>
+      </div>
+      <div class="full-article" id="article-access">
+        <h2>オンライン講演への申込方法</h2>
+        <p><!--講演はzoomビデオウェビナーを通して行います。<br>-->
+          <!--申込方法は近日公開します。-->
+          <!--<b>申込みはこちらの<a href="https://us02web.zoom.us/webinar/register/WN_Alecd3TPQXyfpV1kIXXCVQ">参加者登録フォーム</a>からお願いします。</b>-->
+          申込終了しました。ご参加ありがとうございました。
+          <br>
+          <br>
+          スケジュールに関しては<a href="timetable.html">こちら</a>をご覧ください。<br>
+        </p>
+      </div>>
+      <!-- <div class="full-article" id="article-access">
+        <h2>会場へのアクセス</h2>
+        <div class="article-headline">
+            <p>東京大学本郷キャンパス
+                <br>工学部３号館 ２階 ３１号講義室</p>
+            <p>開場時間：10:00 - 17:30</p>
+        </div>
+        <div id="access-googlemap">
+            <div class="remove-touch">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6479.20333761522!2d139.76010608715725!3d35.71141868380677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc0370d80ba52c2f4!2z5p2x5Lqs5aSn5a2m5bel5a2m6YOoM-WPt-mkqA!5e0!3m2!1sja!2sjp!4v1492669423430"
+                    width="700" height="550" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+            <div class="remove-pc">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6479.305314758033!2d139.76019191784573!3d35.7101642232438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc0370d80ba52c2f4!2z5p2x5Lqs5aSn5a2m5bel5a2m6YOoM-WPt-mkqA!5e0!3m2!1sja!2sjp!4v1492669562264"
+                    width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+        </div>
+      </div> -->
+      <div class="full-article article-dark" id="article-inquiry">
+        <h2>お問い合わせ</h2>
+        <div class="article-headline">
+          <p>ご不明な点があれば、お気軽にお問い合わせください。</p>
+        </div>
+        <div id="inquiry-form-pc">
+          <iframe src="https://ws.formzu.net/fgen/S65772278/" id="inqury-iframe" scrolling="yes"></iframe>
+        </div>
+        <div id="inquiry-form-touch">
+          <iframe src="https://ws.formzu.net/sfgen/S65772278/" id="inqury-iframe" scrolling="yes"></iframe>
+        </div>
+      </div>
+      <div class="full-article" id="article-us">
+        <h2>運営団体について</h2>
+        <p>
+          「島村勇徳」は，本企画だけのために集結した東京大学の大学院生・若手研究者有志（通称「大学院生詰め合わせ」）によって運営を行っています。<br>
+          <br>
+          協力: 株式会社
+        </p>
+        <!-- <p>本団体では，企画に参加・協力してくださる院生（含: 六年制学科高学年生）の方を募集しています！お問い合わせフォームからお気軽にお声掛けください。</p> -->
+      </div>
+    </div>
+  </body>
 </html>
+
