--- a/index.html
+++ b/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=360">
-    <meta name="description" content="島村勇徳のウェブページです。最先端の研究について10分間で分かりやすくお伝えします。">
-    <meta name="keywords" content="東京大学,東大,五月祭,学園祭,講演,2020,10分で伝えます,10分,東大研究最前線,研究最前線,研究">
-    <title>2020年度五月祭「島村勇徳」</title>
+    <meta name="description" content="Take's website (Takenori SHIMAMURA)">
+    <meta name="keywords" content="東京大学,研究,島村勇徳,しまむらたけのり,Takenori SHIMAMURA, The University of Tokyo">
+    <title>Takenori SHIMAMURA (Take)</title>
     <link rel="stylesheet" href="css/main.css?201804201023">
+    <link rel="icon" href="img/favicon.ico">
 
     <!-- OGP -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@ut10min">
-    <meta name="twitter:creator" content="@ut10min">
-    <meta name="twitter:title" content="2020年度五月祭「島村勇徳」 - 講演トップ">
-    <meta name="twitter:description" content="島村勇徳のウェブページです。最先端の研究について10分間で分かりやすくお伝えします。">
-    <meta name="twitter:image" content="https://iappotakebee.github.io/mf93/img/logo_mf93.png">
-    <meta property="og:title" content="2020年度五月祭「島村勇徳」 - 講演トップ">
-    <meta property="og:url" content="https://iappotakebee.github.io/mf93/timetable.html">
-    <meta property="og:image" content="https://iappotakebee.github.io/mf93/img/logo_mf93.png">
-    <meta property="og:site_name" content="2020年度五月祭「島村勇徳」">
+    <!--<meta name="twitter:card" content="summary"> -->
+    <!--<meta name="twitter:site" content="@ut10min"> -->
+    <!--<meta name="twitter:creator" content="@ut10min"> -->
+    <!--<meta name="twitter:title" content="2021年度五月祭「10分で伝えます！東大研究最前線」 - 講演トップ"> -->
+    <!--<meta name="twitter:description" content="2021年度東京大学五月祭企画「10分で伝えます！東大研究最前線」のウェブページです。最先端の研究について10分間で分かりやすくお伝えします。"> -->
+    <!--<meta name="twitter:image" content="https://ut-10min.github.io/mf94/img/logo_mf94.png"> -->
+    <meta property="og:title" content="Take's website (Takenori SHIMAMURA)">
+    <meta property="og:url" content="https://iappotakebee.github.io/index.html">
+    <meta property="og:image" content="https://iappotakebee.github.io/img/logo.png">
+    <meta property="og:site_name" content="Take's website (Takenori SHIMAMURA)">
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123778672-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8XWBV5SP1S"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
 
-      gtag('config', 'UA-123778672-1');
+gtag('config', 'G-8XWBV5SP1S');
     </script>
+
 
     <!-- user script -->
     <script src="js/main.js"></script>
@@ -39,90 +41,114 @@
   <body>
     <div class="fixed-nav">
       <div class="fixed-nav-inner">
-        <a href="/">トップ</a>
-        <!-- <a href="index.html" class="active">トップ</a> -->
-        <a href="index.html" class="active">講演トップ</a>
-        <a href="talks.html">講演一覧</a>
-        <a href="timetable.html">タイムテーブル</a>
+        <!-- <a href="/">Overview</a> -->
+        <a href="index.html" class="active">Overview</a> 
+        <a href="publications.html">Research/Publications</a>
+        <a href="talks.html">Talks/Outreach</a>
+        <a href="awards.html">Awards/Grants</a>
+        <a href="experience.html">Experience</a>
       </div>
     </div>
     <div class="container">
       <div id="title-hero">
-        <div id="title-logo">
+        <!-- <div id="title-logo">
           <img src="img/title.png">
-        </div>
+        </div>  -->
         <div id="title-info">
-          <p>2020/09/20-21</p>
-          <h4>第93回&nbsp;東京大学五月祭 (オンライン開催)</h4>
-          <!-- <p>申込は<a href="https://us02web.zoom.us/webinar/register/WN_Alecd3TPQXyfpV1kIXXCVQ" style="color : #ffffff;">こちら</a>から</p>-->
-          <p>五月祭常任委員会認定&nbsp;みどころ企画</p>
+          <p>
+          <i>Given enough time, nothing is accomplished.</i> − The Mafia Manager
+          <h4>SHIMAMURA Takenori | Take<br>島村 勇徳</h4>
+          </p>
         </div>
       </div>
       <div class="full-article" id="article-intro">
-        <h2>この企画について</h2>
+        <h2>Introduction</h2>
         <div class="article-headline">
-          <h3>大学院生・若手研究者が、<br>
-          みなさまに最前線の「新しい」をお伝えします。</h3>
+          <h3>Goal-driven hardworking student in the fields of X-ray physics and precision engineering with a hint of high-performance computing skill.</h3>
+        <p>
+        This website is currently under development. I am working on research that will deserve this website.
+        </p>
         </div>
-        <p>《島村勇徳》は、<br>
-        <b>理系文系問わず集まった東京大学の大学院生／若手研究者による講演企画</b>です。<br>
-        様々な分野をとり混ぜて、それぞれ<b>10分間</b>という短い時間でお伝えします。<br>
-        質疑応答の時間も確保し、より深く知りたいあなたの知的好奇心に応えます。<br>
-        今年は<b>オンラインで zoom を用いて行います</b>。</p>
         <p class="center" id="socialicons">
-          <a href="https://twitter.com/ut10min" target="_blank"><img src="img/tweet.png"></a>
-          <a href="https://www.facebook.com/10minScience/" target="_blank"><img src="img/facebook.png"></a>
+          <!-- <a href="https://twitter.com/ut10min" target="_blank">
+            <img src="img/tweet.png"></a> -->
+          <a href="https://www.facebook.com/yutoku.shimamura/" target="_blank">
+            <img src="img/facebook.png"></a>
+          <a href="https://www.researchgate.net/profile/Takenori-Shimamura" target="_blank">
+            <img src="img/researchgate.png"></a>
+          <a href="mailto:shimamura[ ]edm.t.u-tokyo.ac.jp?body=Please replace [ ] in the e-mail address with the at symbol, thank you!">
+            <img src="img/mail.png"></a>
+          <!-- <a href="https://www.instagram.com/ut10min/" target="_blank">
+            <img src="img/instagram_qr.png"></a> -->
+          <!-- <a href="vote.html" target="_blank">
+          <img src="img/may-chan.png"></a> -->
+          <!-- <a href="https://gogatsusai.jp/94/visitor/awards/" target="_blank">
+          <img src="img/MayFesAwards.png"></a> -->
         </p>
       </div>
       <div class="full-article" id="article-access">
-        <h2>オンライン講演への申込方法</h2>
-        <p><!--講演はzoomビデオウェビナーを通して行います。<br>-->
-          <!--申込方法は近日公開します。-->
-          <!--<b>申込みはこちらの<a href="https://us02web.zoom.us/webinar/register/WN_Alecd3TPQXyfpV1kIXXCVQ">参加者登録フォーム</a>からお願いします。</b>-->
-          申込終了しました。ご参加ありがとうございました。
-          <br>
-          <br>
-          スケジュールに関しては<a href="timetable.html">こちら</a>をご覧ください。<br>
+        <h2>Affiliations</h2>
+        <ul type="circle">
+          <li>Third-year PhD candidate at the Univerisity of Tokyo, Japan</li>
+          <li>Research student at the JASRI (Japan Synchrotron Radiation Research Institute), SPring-8, Japan</li>
+          <li>DC1 research fellow at the JSPS (Japan Society for the Promotion of Science), Japan</li>
+        </ul>
+      </div>
+      <div class="full-article" id="article-access">
+        <h2>Selected items</h2>
+        <h4>Publications</h4>
+        <p>
+        <ul type="circle">
+          <li>Y. Takeo <i>et al.</i> A highly efficient nanofocusing system 
+            for soft x rays, <i>Appl. Phys. Lett.</i> <b>117</b>, 
+            151104 (2020).</li>
+          <li>T. Shimamura <i>et al.</i> Design of 
+            ultrashort Kirkpatrick-Baez mirror for soft x-ray nanofocusing, 
+            <i>Proc. SPIE</i> <b>11492</b>, 114920P, (2020).</li>
+        </ul>
         </p>
-      </div>>
-      <!-- <div class="full-article" id="article-access">
-        <h2>会場へのアクセス</h2>
-        <div class="article-headline">
-            <p>東京大学本郷キャンパス
-                <br>工学部３号館 ２階 ３１号講義室</p>
-            <p>開場時間：10:00 - 17:30</p>
-        </div>
-        <div id="access-googlemap">
-            <div class="remove-touch">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6479.20333761522!2d139.76010608715725!3d35.71141868380677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc0370d80ba52c2f4!2z5p2x5Lqs5aSn5a2m5bel5a2m6YOoM-WPt-mkqA!5e0!3m2!1sja!2sjp!4v1492669423430"
-                    width="700" height="550" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
-            <div class="remove-pc">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6479.305314758033!2d139.76019191784573!3d35.7101642232438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc0370d80ba52c2f4!2z5p2x5Lqs5aSn5a2m5bel5a2m6YOoM-WPt-mkqA!5e0!3m2!1sja!2sjp!4v1492669562264"
-                    width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
-        </div>
-      </div> -->
-      <div class="full-article article-dark" id="article-inquiry">
-        <h2>お問い合わせ</h2>
-        <div class="article-headline">
-          <p>ご不明な点があれば、お気軽にお問い合わせください。</p>
-        </div>
-        <div id="inquiry-form-pc">
-          <iframe src="https://ws.formzu.net/fgen/S65772278/" id="inqury-iframe" scrolling="yes"></iframe>
-        </div>
-        <div id="inquiry-form-touch">
-          <iframe src="https://ws.formzu.net/sfgen/S65772278/" id="inqury-iframe" scrolling="yes"></iframe>
+        <h4>Patent</h4>
+        <ul type="circle">
+          <li>T. Shimamura <i>et al.</i> 
+            Ultra-short X-ray focusing optics, 
+            JP Patent Pending 2021-128004 (2021).</li>
+        </ul>
+        <h4>Research outreach activity</h4>
+        <ul type="circle">
+          <li> T. Shimamura, 
+            Atomic-scale “chest X-rays” with ultrasmall mirrors, 
+            HIRAKU 3MT Competition 2021 English Division, 
+            November 3, 2021 (Winner), 
+            available <a href="https://youtu.be/QiAjXKsTg14?t=24" target="_blank" rel="noopener noreferrer" >online</a>
+            [Presentation]. </li>
+        </ul>
+        <h4>Awards</h4>
+        <ul type="circle">
+          <li> JSPE Autumn Annual Meeting 2021 
+            Advanced Best Presentation Award, JSPE 
+            (Japan Society of Precision Engineering) (6 in 328) </li>
+          <li> Dean’s Award for The Best Undergraduate Student AY2017, 
+            The University of Tokyo (1 in 987, top) </li>
+        </ul>
+      </div>
+      <div class="full-article" id="article-access">
+        <h2>Résumé</h2>
+        <p> You can find my résumé <a href="resume.html">here</a>.
+        </p>
+      </div>
+      <div class="full-article" id="article-inquiry">
+        <h2>My engineering gallery</h2>
+        <div id="pictures">
+          <ul>
+            <li><img src="img/gallery/ManipulatorwithAutocolimators.gif" alt="Manipulator GIF animation"></li>
+            <li><img src="img/gallery/ManipulatorChamberRealistic.gif" alt="Manipulator GIF animation"></li>
+            <li><img src="img/gallery/ManipulatorRealistic2.gif" alt="Manipulator GIF animation"></li>
+          </ul>
         </div>
       </div>
-      <div class="full-article" id="article-us">
-        <h2>運営団体について</h2>
-        <p>
-          「島村勇徳」は，本企画だけのために集結した東京大学の大学院生・若手研究者有志（通称「大学院生詰め合わせ」）によって運営を行っています。<br>
-          <br>
-          協力: 株式会社
+      <div class="full-article" id="article-credit">
+        <p> This website refers to and imitates the website of <a href="https://ut-10min.github.io" target="_blank" rel="noopener noreferrer" ><i>UTokyo 10-minute lightning talks of research frontier</i></a>, where I communicated the impact of X-ray optics to ordinary citizens and administrated its website.
         </p>
-        <!-- <p>本団体では，企画に参加・協力してくださる院生（含: 六年制学科高学年生）の方を募集しています！お問い合わせフォームからお気軽にお声掛けください。</p> -->
       </div>
     </div>
   </body>
