--- a/talks.html
+++ b/talks.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=360">
-    <meta name="description" content="2020年度東京大学五月祭企画「10分で伝えます！東大研究最前線」のウェブページです。最先端の研究について10分間で分かりやすくお伝えします。">
-    <meta name="keywords" content="東京大学,東大,五月祭,学園祭,講演,2020,10分で伝えます,10分,東大研究最前線,研究最前線,研究">
-    <title>講演一覧 | 2020年度五月祭「10分で伝えます！東大研究最前線」</title>
+    <meta name="description" content="Take's website (Takenori SHIMAMURA) | Talks and outreach">
+    <meta name="keywords" content="東京大学,研究,島村勇徳,しまむらたけのり,Takenori SHIMAMURA, The University of Tokyo">
+    <title>Takenori SHIMAMURA (Take)</title>
     <link rel="stylesheet" href="css/main.css?1542599248160">
+    <link rel="icon" href="img/favicon.ico">
 
     <!-- OGP -->
-    <meta name="twitter:card" content="summary">
+    <!-- <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@ut10min">
     <meta name="twitter:creator" content="@ut10min">
-    <meta name="twitter:title" content="2020年度五月祭「10分で伝えます！東大研究最前線」 - 講演トップ">
-    <meta name="twitter:description" content="2020年度東京大学五月祭企画「10分で伝えます！東大研究最前線」のウェブページです。最先端の研究について10分間で分かりやすくお伝えします。">
-    <meta name="twitter:image" content="https://ut-10min.github.io/mf93/img/logo_mf93.png">
-    <meta property="og:title" content="2020年度五月祭「10分で伝えます！東大研究最前線」 - 講演トップ">
-    <meta property="og:url" content="https://ut-10min.github.io/mf93/timetable.html">
-    <meta property="og:image" content="https://ut-10min.github.io/mf93/img/logo_mf93.png">
-    <meta property="og:site_name" content="2020年度五月祭「10分で伝えます！東大研究最前線」">
+    <meta name="twitter:title" content="2021年度五月祭「10分で伝えます！東大研究最前線」 - 講演一覧">
+    <meta name="twitter:description" content="2021年度東京大学五月祭企画「10分で伝えます！東大研究最前線」のウェブページです。最先端の研究について10分間で分かりやすくお伝えします。">
+    <meta name="twitter:image" content="https://ut-10min.github.io/mf94/img/logo_mf94.png"> -->
+    <meta property="og:title" content="Take's website (Takenori SHIMAMURA) | Talks and outreach">
+    <meta property="og:url" content="https://iappotakebee.github.io/talks.html">
+    <meta property="og:image" content="https://iappotakebee.github.io/img/logo.png">
+    <meta property="og:site_name" content="Take's website (Takenori SHIMAMURA)">
+
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -27,51 +29,66 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
 
     <!-- data -->
-    <script src="js/data.js?2018110204"></script>
+    <script src="js/data.js?202207131708"></script>
 
     <!-- user script -->
-    <script src="js/main.js?1542599248160"></script>
+    <script src="js/talks.js?202207131708"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123778672-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8XWBV5SP1S"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
 
-      gtag('config', 'UA-123778672-1');
+gtag('config', 'G-8XWBV5SP1S');
     </script>
 
     <script id="template" type="x-tmpl-mustache">
-<dl>
+<a id="{{tag}}"></a>
+<h2>{{header}}</h2>
+<ol><dl>
 {{#talks}}
-<a name="{{title}}" class=anchor></a>
-<dt class=talk-header><span class=title>{{title}}</span>
+<li><a name="{{title}}" class=anchor></a>
+<dt class=talk-header><span class=title>{{title}}  <a href="https://{{url}}" target="_blank" rel="noopener noreferrer" >{{availability}}</a></span>
 <br />
-<span class=name>{{name}}</span>
-<span class=major>({{affiliation}}, 専門:{{major}})</span>
+<span class=name>{{name}},</span>
+<span class=major><i>&nbsp;{{affiliation}}</i>, <b>{{number}}</b> {{page}} ({{year}}) [{{type}}].</span>
 </dt>
 <dd class=talk-abs>{{abstract}}<br>{{info}}</dd>
+</li>
 {{/talks}}
-</dl>
+</dl></ol>
     </script>
   </head>
   <body>
     <div class="fixed-nav">
       <div class="fixed-nav-inner">
-        <a href="/">トップ</a>
-        <!-- <a href="index.html" class="active">トップ</a> -->
-        <a href="index.html">講演トップ</a>
-        <a href="talks.html" class="active">講演一覧</a>
-        <a href="timetable.html">タイムテーブル</a>
+        <a href="index.html">Overview</a> 
+        <a href="publications.html">Research/Publications</a>
+        <a href="talks.html" class="active">Talks/Outreach</a>
+        <a href="awards.html">Awards/Grants</a>
+        <a href="experience.html">Experience</a>
       </div>
     </div>
     <div class="container">
+      <div class="full-article" id="article-access">
+        <h4>Outline</h4>
+        <ol>
+          <li><a href="#IntConf">International conferences</a></li>
+          <li><a href="#JpnConf">Japanese conferences</a></li>
+          <li><a href="#ResOR">Research outreach activities for non-experts</a></li>
+          <li><a href="#MiscArt">Miscellaenous articles</a></li>
+        </ol>
+      </div>
       <div class="full-article" id="article-talks-intro">
-        <h2>講演一覧</h2>
-        <div class="article-headline">
-          <h3>現在準備中です。</h3>
+        <div class="article-headline-js">
+          <h3>Coming soon.</h3>
         </div>
+      </div>
+      <div class="full-article" id="article-credit">
+        <p> This website refers to and imitates the website of <a href="https://ut-10min.github.io" target="_blank" rel="noopener noreferrer" ><i>UTokyo 10-minute lightning talks of research frontier</i></a>, where I communicated the impact of X-ray optics to ordinary citizens and administrated its website.
+        </p>
       </div>
     </div>
   </body>
