[fixed] removed a comma in experience page

--- a/experience.html
+++ b/experience.html
@@ -50,7 +50,7 @@
 <dl>
 {{#exp}}
 <a name="{{title}}" class=anchor></a>
-<dt class=bio-header><span class=period><i>{{period}}</i>, </span>
+<dt class=bio-header><span class=period><i>{{period}}</i> </span>
 <span class=title>{{title}}</span>
 <br />
 <span class=affiliation>{{affiliation}}</i></span>
