--- a/awards.html
+++ b/awards.html
@@ -64,7 +64,7 @@
       <div class="fixed-nav-inner">
         <a href="index.html">Overview</a> 
         <a href="publications.html">Research/Publications</a>
-        <a href="talks.html">Talks/Outreach</a>
+        <a href="talks.html">Talks</a>
         <a href="awards.html" class="active">Awards/Grants</a>
         <a href="experience.html">Experience</a>
       </div>
