--- a/experience.html
+++ b/experience.html
@@ -67,7 +67,7 @@
         <a href="index.html">Overview</a> 
         <a href="publications.html">Research/Publications</a>
         <a href="talks.html">Talks/Outreach</a>
-        <a href="awards.html">Awards/Grants</a>
+        <a href="awards.html">Awards</a>
         <a href="experience.html" class="active">Experience</a>
       </div>
     </div>
