--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ gtag('config', 'G-8XWBV5SP1S');
         <!-- <a href="/">Overview</a> -->
         <a href="index.html" class="active">Overview</a> 
         <a href="publications.html">Research/Publications</a>
-        <a href="talks.html">Talks/Outreach</a>
+        <a href="talks.html">Talks</a>
         <a href="awards.html">Awards/Grants</a>
         <a href="experience.html">Experience</a>
       </div>
