--- a/publications.html
+++ b/publications.html
@@ -65,7 +65,7 @@
       <div class="fixed-nav-inner">
         <a href="index.html">Overview</a> 
         <a href="publications.html" class="active">Research/Publications</a>
-        <a href="talks.html" >Talks/Outreach</a>
+        <a href="talks.html" >Talks</a>
         <a href="awards.html">Awards/Grants</a>
         <a href="experience.html">Experience</a>
       </div>
