[update] fixed the table

--- a/awards.html
+++ b/awards.html
@@ -63,7 +63,7 @@
     <div class="fixed-nav">
       <div class="fixed-nav-inner">
         <a href="index.html">Overview</a> 
-        <a href="publications.html">Research/Publications</a>
+        <a href="publications.html">Research</a>
         <a href="talks.html">Talks</a>
         <a href="awards.html" class="active">Awards/Grants</a>
         <a href="experience.html">Experience</a>
