--- a/experience.html
+++ b/experience.html
@@ -65,7 +65,7 @@
     <div class="fixed-nav">
       <div class="fixed-nav-inner">
         <a href="index.html">Overview</a> 
-        <a href="publications.html">Research/Publications</a>
+        <a href="publications.html">Research</a>
         <a href="talks.html">Talks/Outreach</a>
         <a href="awards.html">Awards</a>
         <a href="experience.html" class="active">Experience</a>
