--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ gtag('config', 'G-8XWBV5SP1S');
       <div class="fixed-nav-inner">
         <!-- <a href="/">Overview</a> -->
         <a href="index.html" class="active">Overview</a> 
-        <a href="publications.html">Research/Publications</a>
+        <a href="publications.html">Research</a>
         <a href="talks.html">Talks</a>
         <a href="awards.html">Awards/Grants</a>
         <a href="experience.html">Experience</a>
