--- a/publications.html
+++ b/publications.html
@@ -64,7 +64,7 @@
     <div class="fixed-nav">
       <div class="fixed-nav-inner">
         <a href="index.html">Overview</a> 
-        <a href="publications.html" class="active">Research/Publications</a>
+        <a href="publications.html" class="active">Research</a>
         <a href="talks.html" >Talks</a>
         <a href="awards.html">Awards/Grants</a>
         <a href="experience.html">Experience</a>
