--- a/talks.html
+++ b/talks.html
@@ -65,7 +65,7 @@ gtag('config', 'G-8XWBV5SP1S');
     <div class="fixed-nav">
       <div class="fixed-nav-inner">
         <a href="index.html">Overview</a> 
-        <a href="publications.html">Research/Publications</a>
+        <a href="publications.html">Research</a>
         <a href="talks.html" class="active">Talks</a>
         <a href="awards.html">Awards/Grants</a>
         <a href="experience.html">Experience</a>
