[update] updated the copyright

--- a/publications.html
+++ b/publications.html
@@ -113,7 +113,7 @@
           <h3>Coming soon.</h3> </div>
       </div>
       <div class="full-article" id="article-credit">
-        <p> This website refers to and imitates the website of <a href="https://ut-10min.github.io" target="_blank" rel="noopener noreferrer" ><i>UTokyo 10-minute lightning talks of research frontier</i></a>, where I communicated the impact of X-ray optics to ordinary citizens and administrated its website.
+        <p> This website refers to and imitates the website of <a href="https://ut-10min.github.io" target="_blank" rel="noopener noreferrer" ><i>UTokyo 10-minute lightning talks of research frontier</i></a>, where I communicated the impact of X-ray optics to non-experts and administrated its website.
         </p>
       </div>
     </div>
