[update] updated the resume

--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@ gtag('config', 'G-8XWBV5SP1S');
           <li> Dean’s Award for The Best Undergraduate Student AY2017, 
             The University of Tokyo (1 in 987, top) </li>
         </ul>
+        <h4>Transferable skills</h4>
+        <ul type="circle">
+          <li> <i><b>One-stop brisk problem-solving</b></i>: designed a novel X-ray focusing device, focusing simulation, built a tangible and record-breaking X-ray microscope, and demonstrated it for the real world.</li>
+          <li> <i><b>Management</b></i>: led a group of 5-30 people while choosing a best position within a spectrum from a player to a motivator (not a boss). Fluent in English and Japanese, and pre-intermediate in French. </li>
       </div>
       <div class="full-article" id="article-access">
         <h2>Résumé</h2>
