--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ gtag('config', 'G-8XWBV5SP1S');
         <h4>Transferable skills</h4>
         <ul type="circle">
           <li> <i><b>One-stop brisk problem-solving</b></i>: designed a novel X-ray focusing device, focusing simulation, built a tangible and record-breaking X-ray microscope, and demonstrated it for the real world.</li>
+          <li> <i><b>Literature review/analysis for identifying issues</b></i>: thoroughly reviewed the 50-year-long field of X-ray microscopy not only for summarizing studies but also for posing research questions.</li>
           <li> <i><b>Management</b></i>: led a group of 5-30 people while choosing a best position within a spectrum from a player to a motivator (not a boss). Fluent in English and Japanese, and pre-intermediate in French. </li>
       </div>
       <div class="full-article" id="article-access">
