[fixed] fixed the bugs

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ gtag('config', 'G-8XWBV5SP1S');
 
 
     <!-- user script -->
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
   </head>
   <body>
     <div class="fixed-nav">
