[update] updated the publication page

--- a/publications.html
+++ b/publications.html
@@ -90,11 +90,11 @@
           <div class="article-headline">
             <h3>X-ray physics, synchrotron radiation, ultra-precision engineering, molecular biology</h3>
             <p>
-            My research question is: could we see through atoms with “chest X-rays”? 
+            My research question is: could we see through atoms with “chest X-rays”? <br><br>
             To unlock the potential of X-rays on an atomic scale, X-ray beams collected onto a small spot, called an X-ray
             nanoprobe, are crucial. Therefore, I dedicated my four years to designing and fabricating my novel X-ray
             focusing device, a combination of 2- and 8-mm-long ultrasmooth mirrors. I also verified the excellent focusing
-            performance of this device by my simulation. My design and fabrication process is patent-pending and their
+            performance of this device by my simulation. <br><br>My design and fabrication process is patent-pending and their
             results are promising; they established the world’s sharpest and smallest X-ray nanoprobe that can utilize an
             entire range of less penetrative X-rays. Performing “chest X-rays” with this probe captured hundreds of
             atoms of interest inside animal cells. My research goal is to achieve an individual-atom resolution and I am
