[fix] fixed the float navigator

--- a/experience.html
+++ b/experience.html
@@ -67,7 +67,7 @@
         <a href="index.html">Overview</a> 
         <a href="publications.html">Research</a>
         <a href="talks.html">Talks</a>
-        <a href="awards.html">Awards</a>
+        <a href="awards.html">Awards/Grants</a>
         <a href="experience.html" class="active">Experience</a>
       </div>
     </div>
