--- a/talks.html
+++ b/talks.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=360">
     <meta name="description" content="Take's website (Takenori SHIMAMURA) | Talks and outreach">
     <meta name="keywords" content="東京大学,研究,島村勇徳,しまむらたけのり,Takenori SHIMAMURA, The University of Tokyo">
-    <title>Takenori SHIMAMURA (Take)</title>
+    <title>Take's talks/outreach</title>
     <link rel="stylesheet" href="css/main.css?1542599248160">
     <link rel="icon" href="img/favicon.ico">
 
