[update] update the icons

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ gtag('config', 'G-8XWBV5SP1S');
         <p class="center" id="socialicons">
           <!-- <a href="https://twitter.com/ut10min" target="_blank">
             <img src="img/tweet.png"></a> -->
-          <a href="https://www.facebook.com/yutoku.shimamura/" target="_blank">
-            <img src="img/facebook.png"></a>
+          <a href="https://www.linkedin.com/in/shimamura-takenori/" target="_blank">
+            <img src="img/linkedin.png"></a>
           <a href="https://www.researchgate.net/profile/Takenori-Shimamura" target="_blank">
             <img src="img/researchgate.png"></a>
           <a href="mailto:shimamura[ ]edm.t.u-tokyo.ac.jp?body=Please replace [ ] in the e-mail address with the at symbol, thank you!">
