[update] updated the title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=360">
     <meta name="description" content="Take's website (Takenori SHIMAMURA)">
     <meta name="keywords" content="東京大学,研究,島村勇徳,しまむらたけのり,Takenori SHIMAMURA, The University of Tokyo">
-    <title>Takenori SHIMAMURA (Take)</title>
+    <title>Takenori SHIMAMURA (Ta-ke)</title>
     <link rel="stylesheet" href="css/main.css?201804201023">
     <link rel="icon" href="img/favicon.ico">
 
