[add] added the google analytics section to the resume html

--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,15 @@
 <html>
   <head>
+    <title>Resume</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8XWBV5SP1S"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'G-8XWBV5SP1S');
+    </script>
     <meta http-equiv="refresh" content="1;URL=https://drive.google.com/drive/folders/17f7LA9QUWZrhz0hpaa29pA0e-DWTN6xq?usp=sharing">
   </head>
 </html>
