[update] updated the index

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ gtag('config', 'G-8XWBV5SP1S');
             Advanced Best Presentation Award, JSPE 
             (Japan Society of Precision Engineering) (6 in 328) </li>
           <li> Dean’s Award for The Best Undergraduate Student AY2017, 
-            The University of Tokyo (1 in 987, top) </li>
+            The University of Tokyo (1 in 987, top of the Engineering Students) </li>
         </ul>
         <h4>Transferable skills</h4>
         <ul type="circle">
