[update] updated keywords

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=360">
     <meta name="description" content="Take's website (Takenori SHIMAMURA)">
-    <meta name="keywords" content="東京大学,研究,島村勇徳,しまむらたけのり,しまむら, たけのり, 島村, 勇徳, Takenori SHIMAMURA, The University of Tokyo">
+    <meta name="keywords" content="東京大学,研究,島村勇徳,しまむらたけのり,しまむら, たけのり, 島村, 勇徳, Takenori SHIMAMURA, Takenori, Shimamura, The University of Tokyo">
     <title>Takenori SHIMAMURA (Ta-ke)</title>
     <link rel="stylesheet" href="css/main.css?201804201023">
     <link rel="icon" href="img/favicon.ico">
