[update] updated keywords

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=360">
     <meta name="description" content="Take's website (Takenori SHIMAMURA)">
-    <meta name="keywords" content="東京大学,研究,島村勇徳,しまむらたけのり,しまむら, たけのり, 島村, 勇徳, Takenori SHIMAMURA, Takenori, Shimamura, The University of Tokyo">
+    <meta name="keywords" content="しまむら,たけのり,島村,勇徳,Takenori,Shimamura,The University of Tokyo,東京大学,研究,首席,工学系研究科,精密工学専攻,工学部首席,工学部長賞,工学系研究科長賞,Valedictroian,School of Engineering,Department of Precision Engineering">
     <title>Takenori SHIMAMURA (Ta-ke)</title>
     <link rel="stylesheet" href="css/main.css?201804201023">
     <link rel="icon" href="img/favicon.ico">
