[update] updated keywords

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ gtag('config', 'G-8XWBV5SP1S');
             Advanced Best Presentation Award, JSPE 
             (Japan Society of Precision Engineering) (6 in 328) </li>
           <li> Dean’s Award for The Best Undergraduate Student AY2017, 
-            The University of Tokyo (1 in 987, top of the Engineering Students) </li>
+            The University of Tokyo (1 in 987, top of the Engineering Students though the 4-year-long curriculum) </li>
         </ul>
         <h4>Transferable skills</h4>
         <ul type="circle">
@@ -153,7 +153,7 @@ gtag('config', 'G-8XWBV5SP1S');
         </div>
       </div>
       <div class="full-article" id="article-credit">
-        <p> This website refers to and imitates the website of <a href="https://ut-10min.github.io" target="_blank" rel="noopener noreferrer" ><i>UTokyo 10-minute lightning talks of research frontier</i></a>, where I communicated the impact of X-ray optics to non-experts and administrated its website.
+        <p> My website refers to that of <a href="https://ut-10min.github.io" target="_blank" rel="noopener noreferrer" ><i>UTokyo 10-minute lightning talks of research frontier</i></a>, where I communicated the impact of X-ray optics to non-experts and administrated its website. My website is customized by myself.
         </p>
       </div>
     </div>
