--- a/awards.html
+++ b/awards.html
@@ -88,7 +88,7 @@
         </div>
       </div>
       <div class="full-article" id="article-credit">
-        <p> This website refers to and imitates the website of <a href="https://ut-10min.github.io" target="_blank" rel="noopener noreferrer" ><i>UTokyo 10-minute lightning talks of research frontier</i></a>, where I communicated the impact of X-ray optics to non-experts and administrated its website.
+        <p> My website refers to that of <a href="https://ut-10min.github.io" target="_blank" rel="noopener noreferrer" ><i>UTokyo 10-minute lightning talks of research frontier</i></a>, where I communicated the impact of X-ray optics to non-experts and administrated its website. My website is customized by myself.
         </p>
       </div>
     </div>
