[update] updated the publications

--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@ gtag('config', 'G-8XWBV5SP1S');
         <h4>Publications</h4>
         <p>
         <ul type="circle">
+          <li>T. Shimamura <i>et al.</i> Fabrication of ultrashort sub-meter-radius X-ray mirrors
+            using dynamic stencil deposition with figure correction,, 
+            <i>Rev. Sci. Instrum.</i> <b>94</b>, 043102, (2023).</li>
           <li>Y. Takeo <i>et al.</i> A highly efficient nanofocusing system 
             for soft x rays, <i>Appl. Phys. Lett.</i> <b>117</b>, 
             151104 (2020).</li>
-          <li>T. Shimamura <i>et al.</i> Design of 
-            ultrashort Kirkpatrick-Baez mirror for soft x-ray nanofocusing, 
-            <i>Proc. SPIE</i> <b>11492</b>, 114920P, (2020).</li>
         </ul>
         </p>
         <h4>Patent</h4>
