[update] updated the index

--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@ gtag('config', 'G-8XWBV5SP1S');
         <p class="center" id="socialicons">
           <!-- <a href="https://twitter.com/ut10min" target="_blank">
             <img src="img/tweet.png"></a> -->
-          <a href="https://www.linkedin.com/in/shimamura-takenori/" target="_blank">
-            <img src="img/linkedin.png"></a>
+          <a href="https://researchmap.jp/" target="_blank">
+            <img title="researchmap" img src="img/researchmap.gif"></a>
           <a href="https://www.researchgate.net/profile/Takenori-Shimamura" target="_blank">
-            <img src="img/researchgate.png"></a>
-          <a href="mailto:shimamura[ ]edm.t.u-tokyo.ac.jp?body=Please replace [ ] in the e-mail address with the at symbol, thank you!">
-            <img src="img/mail.png"></a>
+            <img title="researchgate" img src="img/researchgate.png"></a>
+          <a href="https://www.linkedin.com/in/shimamura-takenori/" target="_blank">
+            <img title="linkedin" img src="img/linkedin.png"></a>
+          <a href="mailto:tshimamura[ ]issp.u-tokyo.ac.jp?body=Please replace [ ] in the e-mail address with the at symbol, thank you!">
+            <img title="mail" img src="img/mail.png"></a>
           <!-- <a href="https://www.instagram.com/ut10min/" target="_blank">
             <img src="img/instagram_qr.png"></a> -->
           <!-- <a href="vote.html" target="_blank">
